--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@next/font": "13.1.1",
     "firebase": "^9.15.0",
+    "framer-motion": "^8.4.7",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.7.1",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
