--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.7.1",
     "react-toastify": "^9.1.1",
+    "sharp": "^0.31.3",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
