--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.7.1",
     "react-toastify": "^9.1.1",
     "sharp": "^0.31.3",
+    "typed.js": "^2.0.12",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
